package org.tvl.tvlooker.domain.model.enums;

/**
 * Enum representing the type of media in TMDB (The Movie Database).
 * It can be either a MOVIE or a TV show.
 */
public enum TmdbType {
    MOVIE,
    TV
}
