package org.tvl.tvlooker.domain.model.enums;

public enum UserAuthority {
    USER,
    ADMIN
}
